// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CareBlock's two calls — one item's open and done rows > done rows 1`] = `
{
  "data": [
    {
      "assigned_to": null,
      "completed_at": "2026-03-24T12:00:00.000Z",
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-03-24",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-fridge",
      "priority_score": 50,
      "snoozed_until": null,
      "status": "done",
      "task_instance_id": "d-shelves-mar",
      "task_template": {
        "care_type": "cleaning",
        "priority_tier": "recommended",
        "title": "tpl-fridge-shelves",
      },
      "task_template_id": "tpl-fridge-shelves",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": "2026-05-31T23:30:00.000Z",
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-05-31",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-fridge",
      "priority_score": 50,
      "snoozed_until": null,
      "status": "done",
      "task_instance_id": "d-coils-may31",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "recommended",
        "title": "tpl-coils",
      },
      "task_template_id": "tpl-coils",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": "2026-06-01T03:00:00.000Z",
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-01",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-fridge",
      "priority_score": 50,
      "snoozed_until": null,
      "status": "done",
      "task_instance_id": "d-coils-jun1",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "recommended",
        "title": "tpl-coils",
      },
      "task_template_id": "tpl-coils",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
  ],
  "error": null,
}
`;

exports[`CareBlock's two calls — one item's open and done rows > open rows 1`] = `
{
  "data": [
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-23",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Refrigerator",
        "room": {
          "name": "Kitchen",
        },
        "room_id": null,
      },
      "item_unit_id": "item-fridge",
      "priority_score": 50,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-coils",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "recommended",
        "title": "Vacuum fridge coils",
      },
      "task_template_id": "tpl-coils",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-26",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Refrigerator",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-fridge",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-deleted-clean",
      "task_template": {
        "care_type": "cleaning",
        "priority_tier": "optional",
        "title": "Clean fridge drip pan",
      },
      "task_template_id": "tpl-deleted-clean",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-30",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Refrigerator",
        "room": {
          "name": "Kitchen",
        },
        "room_id": null,
      },
      "item_unit_id": "item-fridge",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "snoozed",
      "task_instance_id": "i-fridge-shelves",
      "task_template": {
        "care_type": "cleaning",
        "priority_tier": "optional",
        "title": "Wash fridge shelves",
      },
      "task_template_id": "tpl-fridge-shelves",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
  ],
  "error": null,
}
`;

exports[`the Activity timeline > completion history for one item 1`] = `
{
  "data": [
    {
      "completedAt": "2026-06-01T03:00:00.000Z",
      "completionNotes": null,
      "instanceId": "d-coils-jun1",
      "priorityTier": "recommended",
      "taskTitle": "tpl-coils",
    },
    {
      "completedAt": "2026-05-31T23:30:00.000Z",
      "completionNotes": null,
      "instanceId": "d-coils-may31",
      "priorityTier": "recommended",
      "taskTitle": "tpl-coils",
    },
    {
      "completedAt": "2026-03-24T12:00:00.000Z",
      "completionNotes": null,
      "instanceId": "d-shelves-mar",
      "priorityTier": "recommended",
      "taskTitle": "tpl-fridge-shelves",
    },
  ],
  "error": null,
}
`;

exports[`the Activity timeline > tier changes for one item, newest first 1`] = `
{
  "data": [
    {
      "changedAt": "2026-05-02T10:00:00.000Z",
      "id": "log-08a",
      "newTier": "optional",
      "oldTier": "essential",
      "source": "manual",
      "taskTemplateId": "tpl-filter",
      "taskTitle": "Replace furnace filter",
    },
    {
      "changedAt": "2026-05-02T10:00:00.000Z",
      "id": "log-08b",
      "newTier": "recommended",
      "oldTier": "essential",
      "source": "manual",
      "taskTemplateId": "tpl-hvac-service",
      "taskTitle": "Furnace service",
    },
    {
      "changedAt": "2026-05-01T10:00:00.000Z",
      "id": "log-07",
      "newTier": "essential",
      "oldTier": "recommended",
      "source": "manual",
      "taskTemplateId": "tpl-filter",
      "taskTitle": "Replace furnace filter",
    },
    {
      "changedAt": "2026-04-01T10:00:00.000Z",
      "id": "log-04",
      "newTier": "recommended",
      "oldTier": "essential",
      "source": "manual",
      "taskTemplateId": "tpl-filter",
      "taskTitle": "Replace furnace filter",
    },
    {
      "changedAt": "2026-03-05T10:00:00.000Z",
      "id": "log-02",
      "newTier": "essential",
      "oldTier": "recommended",
      "source": "manual",
      "taskTemplateId": "tpl-hvac-service",
      "taskTitle": "Furnace service",
    },
    {
      "changedAt": "2026-03-02T10:00:00.000Z",
      "id": "log-01",
      "newTier": "essential",
      "oldTier": "recommended",
      "source": "manual",
      "taskTemplateId": "tpl-filter",
      "taskTitle": "Replace furnace filter",
    },
  ],
  "error": null,
}
`;

exports[`the whole-home callers keep their answers > Care page filters, item included 1`] = `
{
  "data": [
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-25",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Dishwasher",
        "room": {
          "name": "Kitchen",
        },
        "room_id": null,
      },
      "item_unit_id": "item-dishwasher",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-wipe-gasket",
      "task_template": {
        "care_type": "cleaning",
        "priority_tier": "optional",
        "title": "Wipe door gasket",
      },
      "task_template_id": "tpl-wipe-gasket",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-07-01",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Dishwasher",
        "room": {
          "name": "Kitchen",
        },
        "room_id": null,
      },
      "item_unit_id": "item-dishwasher",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-clean-filter-dw",
      "task_template": {
        "care_type": "cleaning",
        "priority_tier": "optional",
        "title": "Clean dishwasher filter",
      },
      "task_template_id": "tpl-clean-filter-dw",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
  ],
  "error": null,
}
`;

exports[`the whole-home callers keep their answers > every open row (Schedule / Care pages) 1`] = `
{
  "data": [
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-05-01",
      "home_id": "h1",
      "is_safety_critical": true,
      "item_unit": null,
      "item_unit_id": null,
      "priority_score": 100,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-smoke",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "essential",
        "title": "Test smoke alarms",
      },
      "task_template_id": "tpl-smoke",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-20",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Furnace",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-furnace",
      "priority_score": 100,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-filter",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "essential",
        "title": "Replace furnace filter",
      },
      "task_template_id": "tpl-filter",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-08-20",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Furnace",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-furnace",
      "priority_score": 100,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-hvac-service",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "essential",
        "title": "Furnace service",
      },
      "task_template_id": "tpl-hvac-service",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-23",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Refrigerator",
        "room": {
          "name": "Kitchen",
        },
        "room_id": null,
      },
      "item_unit_id": "item-fridge",
      "priority_score": 50,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-coils",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "recommended",
        "title": "Vacuum fridge coils",
      },
      "task_template_id": "tpl-coils",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-24",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": null,
      "item_unit_id": null,
      "priority_score": 50,
      "snoozed_until": "2026-07-07",
      "status": "snoozed",
      "task_instance_id": "i-gutter-snoozed",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "recommended",
        "title": "Clean gutters",
      },
      "task_template_id": "tpl-gutter",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-26",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Dryer",
        "room": {
          "name": "Laundry",
        },
        "room_id": null,
      },
      "item_unit_id": "item-dryer",
      "priority_score": 50,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-dryer-vent",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "recommended",
        "title": "Clean dryer vent",
      },
      "task_template_id": "tpl-dryer-vent",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-27",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Washer",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-washer",
      "priority_score": 50,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-mixed",
      "task_template": {
        "care_type": "mixed",
        "priority_tier": "recommended",
        "title": "Run washer clean cycle",
      },
      "task_template_id": "tpl-mixed",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-07-20",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Water Heater",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-water-heater",
      "priority_score": 50,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-descale",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "recommended",
        "title": "Check anode rod",
      },
      "task_template_id": "tpl-descale",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Washer",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-washer",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-nodue",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "optional",
        "title": "Inspect washer hoses",
      },
      "task_template_id": "tpl-nodue",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-10",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Range",
        "room": {
          "name": "Kitchen",
        },
        "room_id": null,
      },
      "item_unit_id": "item-range",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-deep-oven",
      "task_template": {
        "care_type": "cleaning",
        "priority_tier": "optional",
        "title": "Deep-clean the oven",
      },
      "task_template_id": "tpl-deep-oven",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-25",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Dishwasher",
        "room": {
          "name": "Kitchen",
        },
        "room_id": null,
      },
      "item_unit_id": "item-dishwasher",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-wipe-gasket",
      "task_template": {
        "care_type": "cleaning",
        "priority_tier": "optional",
        "title": "Wipe door gasket",
      },
      "task_template_id": "tpl-wipe-gasket",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-26",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Refrigerator",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-fridge",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-deleted-clean",
      "task_template": {
        "care_type": "cleaning",
        "priority_tier": "optional",
        "title": "Clean fridge drip pan",
      },
      "task_template_id": "tpl-deleted-clean",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-28",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": null,
      "item_unit_id": null,
      "priority_score": 10,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-baseboards",
      "task_template": {
        "care_type": "cleaning",
        "priority_tier": "optional",
        "title": "Wipe baseboards",
      },
      "task_template_id": "tpl-baseboards",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": "2026-06-12T12:00:00.000Z",
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-29",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Dryer",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-dryer",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-undone",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "optional",
        "title": "Clean lint trap housing",
      },
      "task_template_id": "tpl-undone",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-30",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Refrigerator",
        "room": {
          "name": "Kitchen",
        },
        "room_id": null,
      },
      "item_unit_id": "item-fridge",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "snoozed",
      "task_instance_id": "i-fridge-shelves",
      "task_template": {
        "care_type": "cleaning",
        "priority_tier": "optional",
        "title": "Wash fridge shelves",
      },
      "task_template_id": "tpl-fridge-shelves",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-07-01",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Dishwasher",
        "room": {
          "name": "Kitchen",
        },
        "room_id": null,
      },
      "item_unit_id": "item-dishwasher",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-clean-filter-dw",
      "task_template": {
        "care_type": "cleaning",
        "priority_tier": "optional",
        "title": "Clean dishwasher filter",
      },
      "task_template_id": "tpl-clean-filter-dw",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-07-02",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Water Heater",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-water-heater",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-flush",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "optional",
        "title": "Flush water heater",
      },
      "task_template_id": "tpl-flush",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
  ],
  "error": null,
}
`;

exports[`the whole-home callers keep their answers > no filters 1`] = `
{
  "data": [
    {
      "assigned_to": null,
      "completed_at": "2025-05-01T12:00:00.000Z",
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2025-05-01",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": null,
      "item_unit_id": null,
      "priority_score": 100,
      "snoozed_until": null,
      "status": "done",
      "task_instance_id": "d-smoke-2025",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "essential",
        "title": "tpl-smoke",
      },
      "task_template_id": "tpl-smoke",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-05-01",
      "home_id": "h1",
      "is_safety_critical": true,
      "item_unit": null,
      "item_unit_id": null,
      "priority_score": 100,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-smoke",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "essential",
        "title": "Test smoke alarms",
      },
      "task_template_id": "tpl-smoke",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": "2026-05-12T12:00:00.000Z",
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-05-12",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-furnace",
      "priority_score": 100,
      "snoozed_until": null,
      "status": "done",
      "task_instance_id": "d-filter-may",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "essential",
        "title": "tpl-filter",
      },
      "task_template_id": "tpl-filter",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": "2026-06-10T12:00:00.000Z",
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-10",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-furnace",
      "priority_score": 100,
      "snoozed_until": null,
      "status": "done",
      "task_instance_id": "d-filter-jun",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "essential",
        "title": "tpl-filter",
      },
      "task_template_id": "tpl-filter",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-20",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Furnace",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-furnace",
      "priority_score": 100,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-filter",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "essential",
        "title": "Replace furnace filter",
      },
      "task_template_id": "tpl-filter",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-08-20",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Furnace",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-furnace",
      "priority_score": 100,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-hvac-service",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "essential",
        "title": "Furnace service",
      },
      "task_template_id": "tpl-hvac-service",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": "2026-01-10T12:00:00.000Z",
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-01-10",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-range",
      "priority_score": 50,
      "snoozed_until": null,
      "status": "done",
      "task_instance_id": "d-oven-jan",
      "task_template": {
        "care_type": "cleaning",
        "priority_tier": "recommended",
        "title": "tpl-deep-oven",
      },
      "task_template_id": "tpl-deep-oven",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": "2026-03-24T12:00:00.000Z",
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-03-24",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-fridge",
      "priority_score": 50,
      "snoozed_until": null,
      "status": "done",
      "task_instance_id": "d-shelves-mar",
      "task_template": {
        "care_type": "cleaning",
        "priority_tier": "recommended",
        "title": "tpl-fridge-shelves",
      },
      "task_template_id": "tpl-fridge-shelves",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": "2026-03-26T12:00:00.000Z",
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-03-26",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": null,
      "item_unit_id": null,
      "priority_score": 50,
      "snoozed_until": null,
      "status": "done",
      "task_instance_id": "d-baseboards-mar",
      "task_template": {
        "care_type": "cleaning",
        "priority_tier": "recommended",
        "title": "tpl-baseboards",
      },
      "task_template_id": "tpl-baseboards",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": "2026-04-20T12:00:00.000Z",
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-04-20",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-dryer",
      "priority_score": 50,
      "snoozed_until": null,
      "status": "done",
      "task_instance_id": "d-dryer-apr",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "recommended",
        "title": "tpl-dryer-vent",
      },
      "task_template_id": "tpl-dryer-vent",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": "2026-05-31T23:30:00.000Z",
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-05-31",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-fridge",
      "priority_score": 50,
      "snoozed_until": null,
      "status": "done",
      "task_instance_id": "d-coils-may31",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "recommended",
        "title": "tpl-coils",
      },
      "task_template_id": "tpl-coils",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": "2026-06-01T03:00:00.000Z",
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-01",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-fridge",
      "priority_score": 50,
      "snoozed_until": null,
      "status": "done",
      "task_instance_id": "d-coils-jun1",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "recommended",
        "title": "tpl-coils",
      },
      "task_template_id": "tpl-coils",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-01",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-water-heater",
      "priority_score": 50,
      "snoozed_until": null,
      "status": "done",
      "task_instance_id": "d-no-timestamp",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "recommended",
        "title": "tpl-descale",
      },
      "task_template_id": "tpl-descale",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-01",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-fridge",
      "priority_score": 50,
      "snoozed_until": null,
      "status": "skipped",
      "task_instance_id": "i-skipped",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "recommended",
        "title": "Vacuum fridge coils",
      },
      "task_template_id": "tpl-coils",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": "2026-06-15T12:00:00.000Z",
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-15",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-dishwasher",
      "priority_score": 50,
      "snoozed_until": null,
      "status": "done",
      "task_instance_id": "d-gasket-jun",
      "task_template": {
        "care_type": "cleaning",
        "priority_tier": "recommended",
        "title": "tpl-wipe-gasket",
      },
      "task_template_id": "tpl-wipe-gasket",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-23",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Refrigerator",
        "room": {
          "name": "Kitchen",
        },
        "room_id": null,
      },
      "item_unit_id": "item-fridge",
      "priority_score": 50,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-coils",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "recommended",
        "title": "Vacuum fridge coils",
      },
      "task_template_id": "tpl-coils",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-24",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": null,
      "item_unit_id": null,
      "priority_score": 50,
      "snoozed_until": "2026-07-07",
      "status": "snoozed",
      "task_instance_id": "i-gutter-snoozed",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "recommended",
        "title": "Clean gutters",
      },
      "task_template_id": "tpl-gutter",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-26",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Dryer",
        "room": {
          "name": "Laundry",
        },
        "room_id": null,
      },
      "item_unit_id": "item-dryer",
      "priority_score": 50,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-dryer-vent",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "recommended",
        "title": "Clean dryer vent",
      },
      "task_template_id": "tpl-dryer-vent",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-27",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Washer",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-washer",
      "priority_score": 50,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-mixed",
      "task_template": {
        "care_type": "mixed",
        "priority_tier": "recommended",
        "title": "Run washer clean cycle",
      },
      "task_template_id": "tpl-mixed",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-07-20",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Water Heater",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-water-heater",
      "priority_score": 50,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-descale",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "recommended",
        "title": "Check anode rod",
      },
      "task_template_id": "tpl-descale",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Washer",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-washer",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-nodue",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "optional",
        "title": "Inspect washer hoses",
      },
      "task_template_id": "tpl-nodue",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": "2026-02-01T12:00:00.000Z",
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-02-01",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-water-heater",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "done",
      "task_instance_id": "d-flush-feb",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "optional",
        "title": "tpl-flush",
      },
      "task_template_id": "tpl-flush",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-10",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Range",
        "room": {
          "name": "Kitchen",
        },
        "room_id": null,
      },
      "item_unit_id": "item-range",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-deep-oven",
      "task_template": {
        "care_type": "cleaning",
        "priority_tier": "optional",
        "title": "Deep-clean the oven",
      },
      "task_template_id": "tpl-deep-oven",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-25",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Dishwasher",
        "room": {
          "name": "Kitchen",
        },
        "room_id": null,
      },
      "item_unit_id": "item-dishwasher",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-wipe-gasket",
      "task_template": {
        "care_type": "cleaning",
        "priority_tier": "optional",
        "title": "Wipe door gasket",
      },
      "task_template_id": "tpl-wipe-gasket",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-26",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Refrigerator",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-fridge",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-deleted-clean",
      "task_template": {
        "care_type": "cleaning",
        "priority_tier": "optional",
        "title": "Clean fridge drip pan",
      },
      "task_template_id": "tpl-deleted-clean",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-28",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": null,
      "item_unit_id": null,
      "priority_score": 10,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-baseboards",
      "task_template": {
        "care_type": "cleaning",
        "priority_tier": "optional",
        "title": "Wipe baseboards",
      },
      "task_template_id": "tpl-baseboards",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": "2026-06-12T12:00:00.000Z",
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-29",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Dryer",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-dryer",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-undone",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "optional",
        "title": "Clean lint trap housing",
      },
      "task_template_id": "tpl-undone",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-30",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Refrigerator",
        "room": {
          "name": "Kitchen",
        },
        "room_id": null,
      },
      "item_unit_id": "item-fridge",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "snoozed",
      "task_instance_id": "i-fridge-shelves",
      "task_template": {
        "care_type": "cleaning",
        "priority_tier": "optional",
        "title": "Wash fridge shelves",
      },
      "task_template_id": "tpl-fridge-shelves",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-07-01",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Dishwasher",
        "room": {
          "name": "Kitchen",
        },
        "room_id": null,
      },
      "item_unit_id": "item-dishwasher",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-clean-filter-dw",
      "task_template": {
        "care_type": "cleaning",
        "priority_tier": "optional",
        "title": "Clean dishwasher filter",
      },
      "task_template_id": "tpl-clean-filter-dw",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-07-02",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Water Heater",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-water-heater",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-flush",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "optional",
        "title": "Flush water heater",
      },
      "task_template_id": "tpl-flush",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
  ],
  "error": null,
}
`;

exports[`the whole-home callers keep their answers > scheduled only (Cleaning page) 1`] = `
{
  "data": [
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-05-01",
      "home_id": "h1",
      "is_safety_critical": true,
      "item_unit": null,
      "item_unit_id": null,
      "priority_score": 100,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-smoke",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "essential",
        "title": "Test smoke alarms",
      },
      "task_template_id": "tpl-smoke",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-20",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Furnace",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-furnace",
      "priority_score": 100,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-filter",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "essential",
        "title": "Replace furnace filter",
      },
      "task_template_id": "tpl-filter",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-08-20",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Furnace",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-furnace",
      "priority_score": 100,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-hvac-service",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "essential",
        "title": "Furnace service",
      },
      "task_template_id": "tpl-hvac-service",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-23",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Refrigerator",
        "room": {
          "name": "Kitchen",
        },
        "room_id": null,
      },
      "item_unit_id": "item-fridge",
      "priority_score": 50,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-coils",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "recommended",
        "title": "Vacuum fridge coils",
      },
      "task_template_id": "tpl-coils",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-26",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Dryer",
        "room": {
          "name": "Laundry",
        },
        "room_id": null,
      },
      "item_unit_id": "item-dryer",
      "priority_score": 50,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-dryer-vent",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "recommended",
        "title": "Clean dryer vent",
      },
      "task_template_id": "tpl-dryer-vent",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-27",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Washer",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-washer",
      "priority_score": 50,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-mixed",
      "task_template": {
        "care_type": "mixed",
        "priority_tier": "recommended",
        "title": "Run washer clean cycle",
      },
      "task_template_id": "tpl-mixed",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-07-20",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Water Heater",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-water-heater",
      "priority_score": 50,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-descale",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "recommended",
        "title": "Check anode rod",
      },
      "task_template_id": "tpl-descale",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Washer",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-washer",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-nodue",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "optional",
        "title": "Inspect washer hoses",
      },
      "task_template_id": "tpl-nodue",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-10",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Range",
        "room": {
          "name": "Kitchen",
        },
        "room_id": null,
      },
      "item_unit_id": "item-range",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-deep-oven",
      "task_template": {
        "care_type": "cleaning",
        "priority_tier": "optional",
        "title": "Deep-clean the oven",
      },
      "task_template_id": "tpl-deep-oven",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-25",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Dishwasher",
        "room": {
          "name": "Kitchen",
        },
        "room_id": null,
      },
      "item_unit_id": "item-dishwasher",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-wipe-gasket",
      "task_template": {
        "care_type": "cleaning",
        "priority_tier": "optional",
        "title": "Wipe door gasket",
      },
      "task_template_id": "tpl-wipe-gasket",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-26",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Refrigerator",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-fridge",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-deleted-clean",
      "task_template": {
        "care_type": "cleaning",
        "priority_tier": "optional",
        "title": "Clean fridge drip pan",
      },
      "task_template_id": "tpl-deleted-clean",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-28",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": null,
      "item_unit_id": null,
      "priority_score": 10,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-baseboards",
      "task_template": {
        "care_type": "cleaning",
        "priority_tier": "optional",
        "title": "Wipe baseboards",
      },
      "task_template_id": "tpl-baseboards",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": "2026-06-12T12:00:00.000Z",
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-06-29",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Dryer",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-dryer",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-undone",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "optional",
        "title": "Clean lint trap housing",
      },
      "task_template_id": "tpl-undone",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-07-01",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Dishwasher",
        "room": {
          "name": "Kitchen",
        },
        "room_id": null,
      },
      "item_unit_id": "item-dishwasher",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-clean-filter-dw",
      "task_template": {
        "care_type": "cleaning",
        "priority_tier": "optional",
        "title": "Clean dishwasher filter",
      },
      "task_template_id": "tpl-clean-filter-dw",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
    {
      "assigned_to": null,
      "completed_at": null,
      "completion_notes": null,
      "completion_photos": [],
      "created_at": "2026-01-05T12:00:00.000Z",
      "deleted_at": null,
      "due_date": "2026-07-02",
      "home_id": "h1",
      "is_safety_critical": false,
      "item_unit": {
        "display_name": "Water Heater",
        "room": null,
        "room_id": null,
      },
      "item_unit_id": "item-water-heater",
      "priority_score": 10,
      "snoozed_until": null,
      "status": "scheduled",
      "task_instance_id": "i-flush",
      "task_template": {
        "care_type": "maintenance",
        "priority_tier": "optional",
        "title": "Flush water heater",
      },
      "task_template_id": "tpl-flush",
      "updated_at": "2026-01-05T12:00:00.000Z",
      "window_end": null,
      "window_start": null,
    },
  ],
  "error": null,
}
`;
